syntax = "proto3";

package com.distributed.kv;
option java_outer_classname = "KVStoreProto";

service KVStore {
  // Client facing
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);

  // Raft Internal
  rpc RequestVote (VoteRequest) returns (VoteResponse);
  rpc AppendEntries (AppendRequest) returns (AppendResponse);
}

// --- Client Messages ---
message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
}

// --- Raft Messages ---

// "Vote for me!"
message VoteRequest {
  int32 term = 1;          // Candidate's Term
  string candidateId = 2;  // Who is asking?
}

message VoteResponse {
  int32 term = 1;          // Voter's current term
  bool voteGranted = 2;    // Yes or No
}

// "I am Leader / Here is data"
message AppendRequest {
  int32 term = 1;          // Leader's Term
  string leaderId = 2;     // Leader ID
  
  // Replication Fields
  string key = 3;          // (Optional) Key to replicate
  string value = 4;        // (Optional) Value to replicate
}

message AppendResponse {
  int32 term = 1;
  bool success = 2;
}